Completed the other html files and added the jpg files

--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
 </head>
 <body>
     
-    <!-- Link to Juneteenth page (in red) -->
     <a href="june19.html" style="color: purple;">Juneteenth</a>
 
-    <!-- Link to Other Holiday page (in blue) -->
-    <a href="juneOther.html" style="color: blue;">Christmas</a>
+    <a href="juneOther.html" style="color: blue;">National Watchday</a>
 </body>
 </html>
